--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,6 @@
 footer{
     text-align: center;
 }
-body{
-    background-color: rgb(155, 243, 234);
-}
+/* body{
+    /* background-color: rgb(155, 243, 234); */
+/* }  */
